[project]
name = "ai-rag-tutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.5",
    "ollama>=0.4.8",
    "pypdf>=5.8.0",
    "streamlit>=1.47.0",
]
